# fm-offline-pos

./: Cargo.toml  Trunk.toml  flake.nix  index.html  qrloop-bundle.js  style.css
.github/workflows/: deploy.yml
crates/pos-web/: Cargo.toml
crates/pos-web/src/: app.rs  ecash.rs  exchange.rs  main.rs  qr.rs  scanner.rs  storage.rs
