[package]
name = "pos-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bech32 = "0.11"
console_error_panic_hook = "0.1.7"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
hex = "0.4"
js-sys = "0.3"
leptos = { version = "0.7.8", default-features = false, features = ["csr"] }
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tracing = "0.1"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "Document",
  "HtmlDocument",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "MediaDevices",
  "MediaStream",
  "MediaStreamTrack",
  "MediaStreamConstraints",
  "MediaTrackConstraints",
  "Navigator",
  "Response",
  "Window",
  "Storage",
  "console",
] }

[lints]
workspace = true
